--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body class="light">
     </div>
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container" id = "light">
+<div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text"></span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
     {
@@ -36,45 +36,10 @@
       "proName": "BINANCE:CAKEUSDT"
     }
   ],
+  "showSymbolLogo": true,
   "colorTheme": "light",
   "isTransparent": true,
-  "showSymbolLogo": true,
-  "locale": "en"
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
-   <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container" id = "dark">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
-  {
-  "symbols": [
-    {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "BTC/USD"
-    },
-    {
-      "proName": "BITSTAMP:ETHUSD",
-      "title": "ETH/USD"
-    },
-    {
-      "description": "SLP/PHP",
-      "proName": "SLPUSDT*FX_IDC:USDPHP"
-    },
-    {
-      "description": "AXS/USD",
-      "proName": "BINANCE:AXSUSDT"
-    },
-    {
-      "description": "CAKE/USD",
-      "proName": "BINANCE:CAKEUSDT"
-    }
-  ],
-  "colorTheme": "light",
-  "isTransparent": true,
-  "showSymbolLogo": true,
+  "displayMode": "regular",
   "locale": "en"
 }
   </script>
